 /* $Id: changelog,v 1.747 2000-02-23 01:07:23 sandervl Exp $ */

 2000-02-22: Sander van Leeuwen <sandervl@xs4all.nl>
	- WINMM/GDI32/KERNEL32/USER32: Fixed compile problems for release build
	- USER32: Fixed bug in window class ctor (windowProc not set to 0)
                  (only showed up in release build)
	- KERNEL32: Fixed bug in commitPage (winimagepeldr.cpp) 
                    (only showed up in release build)
                    Fixed wrong calling convention for SetLastError calls
                    in OSLibiGetModuleHandleA
                    (only showed up in release build)
                    Fixed wrong calling convention for SetLastError calls
                    in oslibdos.cpp.

 2000-02-22: Christoph Bratschi <cbratschi@datacomm.ch>
	- COMCTL32: merged with Corel WINE 20000212
		    added common base functions

 2000-02-21: Przemyslaw Dobrowolski <dobrawka@asua.org.pl>
	- CRTDLL: Added wtol, wtoi, setsystime, getsystime

 2000-02-21: Christoph Bratschi <cbratschi@datacomm.ch>
	- USER32: merged controls and nc code with Corel WINE 20000212
		  added WS_EX_CONTEXTHELP button

 2000-02-21: knut st. osmundsen <knut.stange.osmundse@pmsc.no>
        - WIN32K: *Initial support for UNIX-styled scripts
                   (files starting with an #!<interpreter> [args...])
                   This is a _very_ big hack! But never the less it's working.
                   (or at least it seems like working...)
                  *The kernel symbol importer is enhanced to support more
                   generic function prologs and to import variables and
                   16-bit functions.
                  *Segments are now locked in physical memory.
                  (Note, last changes have not been tested on Aurora yet,
                   but it will hopefully work just fine.)

 2000-02-21: Sander van Leeuwen <sandervl@xs4all.nl>
	- GDI32: SetDIBits bugfix (for dib sections)
	- USER32: Ported all Wine accelerator apis (fixes keys in calc)
