@@ -1,4 +1,4 @@
-/* $Id: animate.h,v 1.2 1999-10-01 15:52:19 cbratschi Exp $ */
+/* $Id: animate.h,v 1.3 2000-02-23 17:03:00 cbratschi Exp $ */
 
 /*
  * Animation class extra info
@@ -10,23 +10,51 @@
 #ifndef __WINE_ANIMATE_H
 #define __WINE_ANIMATE_H
 
+#define CINTERFACE
+
+#include "windef.h"
+#include "vfw.h"
 
 typedef struct tagANIMATE_INFO
 {
-    LPVOID  lpAvi;   /* pointer to avi data */
-    HFILE   hFile;   /* handle to avi file */
-    HGLOBAL hRes;
-    INT     cSize;
-    INT     cRepeat;
-    INT     wFrom;
-    INT     wTo;
-    INT     wPos;
-    INT     cFrames;
-    BOOL    bPlaying;
-    POINT   pos;
-    POINT   size;
-    INT     msFrame;
-    BOOL    bThread;
+   COMCTL32_HEADER      header;
+
+   /* pointer to msvideo functions. it's easier to put them here.
+    * to be correct, they should be defined on a per process basis, but
+    * this would required a per process storage. We're using a per object
+    * storage instead, which is not efficient on memory usage, but
+    * will lead to less bugs in the future
+    */
+   HIC          (WINAPI*  fnICOpen)(DWORD, DWORD, UINT);
+   LRESULT      (WINAPI*  fnICClose)(HIC);
+   LRESULT      (WINAPI*  fnICSendMessage)(HIC, UINT, DWORD, DWORD);
+   DWORD        (WINAPIV* fnICDecompress)(HIC,DWORD,LPBITMAPINFOHEADER,LPVOID,LPBITMAPINFOHEADER,LPVOID);
+
+   /* reference to input stream (file or resource) */
+   HGLOBAL              hRes;
+   HMMIO                hMMio;  /* handle to mmio stream */
+   HWND                 hWnd;
+   /* information on the loaded AVI file */
+   MainAVIHeader        mah;
+   AVIStreamHeader      ash;
+   LPBITMAPINFOHEADER   inbih;
+   LPDWORD              lpIndex;
+   /* data for the decompressor */
+   HIC                  hic;
+   LPBITMAPINFOHEADER   outbih;
+   LPVOID               indata;
+   LPVOID               outdata;
+   /* data for the background mechanism */
+   CRITICAL_SECTION     cs;
+   HANDLE               hThread;
+   UINT                 delay;
+   BOOL                 stopThread;
+   UINT                 uTimer;
+   /* data for playing the file */
+   int                  nFromFrame;
+   int                  nToFrame;
+   int                  nLoop;
+   int                  currFrame;
 } ANIMATE_INFO;
 
 
